--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   font-family: 'Jost', sans-serif;
 }
 
+
 /* .container {
     max-width: 1140px;
     margin: auto;
@@ -146,15 +147,16 @@ header.nav-fixed {
 }
 
 /* carousel */
-#site-header{
+/* #site-header {
   overflow: hidden;
   background-color: #f1f1f1;
   padding: 90px 10px;
   transition: 0.4s;
   width: 100%;
   top: 0;
-  z-index:99;
-}
+  z-index: 99;
+} */
+
 /* làm cho hình có độ mờ */
 .carousel-inner::after {
   content: "";
@@ -176,102 +178,226 @@ header.nav-fixed {
   font-size: 17px;
   font-weight: 600;
 }
-.Corpcarousel .carousel-caption{
+
+.Corpcarousel .carousel-caption {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: left;
 }
-.Corpcarousel .carousel-caption p{
+
+.Corpcarousel .carousel-caption p {
   width: 50%;
   /* margin: 0 auto; */
 }
-.Corpcarousel .carousel-caption h1{
+
+.Corpcarousel .carousel-caption h1 {
   font-size: 65px;
   line-height: 1;
   margin-bottom: 30px;
 }
-.Corpcarousel .carousel-caption p{
+
+.Corpcarousel .carousel-caption p {
   font-size: 20px;
   margin-bottom: 30px;
 }
 
 /* ABOUT US */
-/* .row{
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-} */
-.title-small{
+
+.title-small {
   font-size: 14px;
   font-weight: 600;
- line-height: 30px;
- letter-spacing: 1px;
- color: #7e7d7d;
- display: block;
+  line-height: 30px;
+  letter-spacing: 1px;
+  color: #7e7d7d;
+  display: block;
 }
-.title-big{
+
+.title-big {
   font-size: 35px;
   line-height: 45px;
   font-weight: 600;
   color: #3f3a64;
 }
-.content{
+
+.content {
   font-size: 17px;
   line-height: 27px;
-  color:#666 ;
+  color: #666;
   opacity: .8;
 }
-ul.sevice-list li{
+
+ul.sevice-list li {
   display: block;
   margin-bottom: 15px;
-  
-} 
-ul.sevice-list i{
+
+}
+
+ul.sevice-list i {
   color: #009f4d;
   margin-right: 5px;
   opacity: .8;
 }
-ul.sevice-list li a{
+
+ul.sevice-list li a {
   text-decoration: none;
-  color:#3f3a64;
+  color: #3f3a64;
   font-size: 18px;
- line-height: 28px;
- font-weight: 600;
- /* position: relative; */
+  line-height: 28px;
+  font-weight: 600;
+  /* position: relative; */
 }
-.radius-image{
+
+.radius-image {
   border-radius: 8px;
 }
 
 /* FEATURE */
-.feature{
-  background-color:#f7f7f7 ;
+.feature {
+  background-color: #f7f7f7;
 }
-.box-wrap{
+
+.box-wrap {
   padding: 40px 30px;
   border-radius: 8px;
   text-align: center;
   box-shadow: rgb(1 1 1 / 5%) 1px 1px 5px;
   background-color: #fff;
+  transform: translateY(5px);
   transition: all .5s;
 }
-.box-wrap:hover{
+
+.box-wrap:hover {
   box-shadow: rgb(46 41 51 / 8%) 0px 2px 4px, rgb(71 63 79 / 16%) 0px 5px 10px;
+  transform: translateY(0)
 }
-.call-grids-w3{
+
+.d-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 25px;
 }
+
 .box-wrap h4 a {
   font-size: 22px;
   line-height: 28px;
   font-weight: 600;
   margin-top: 25px;
   display: block;
-  color:#3f3a64 ;
+  color: #3f3a64;
   text-decoration: none;
 }
+
+/* SERVICES */
+.service-image {
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.blog-info {
+  padding: 0 20px;
+  position: relative;
+}
+
+.blog-info .title {
+  font-size: 19px;
+  line-height: 28px;
+  font-weight: 600;
+  color: #3f3a64;
+  text-align: center;
+  background-color: white;
+  padding: 12px 35px;
+  display: inline-block;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  transform: translateY(-25px);
+  text-decoration: none;
+  box-shadow: rgb(1 1 1 / 5%) 1px 1px 5px 0px;
+  ;
+}
+
+.grids5-info:hover .blog-info a.title {
+  color: #00a63f;
+}
+.btn-style {
+  padding: 8px 35px;
+  line-height: 28px;
+  font-weight: 600;
+  color: #3f3a64;
+  border-radius:8px;
+}
+.grids5-info a.btn-style:hover {
+  color: #00a63f;
+}
+
+
+/* GALLERYS */
+.gallery{
+  background-color: #f8f9fa;
+}
+/* .gallery .col-md-6{
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+} */
+.zoom{
+  overflow: hidden;
+  position: relative;
+  
+}
+.company-logos{
+  border-top: 1px solid #eee;
+}
+.company-logos img {
+  padding: 0 18px;
+}
+.gallery__item img {
+  width: 100%;
+  height: 100%;
+  /* border-radius: 10px; */
+}
+.gallery__list{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+.gallery__item {
+  position: relative;
+  /* overflow: hidden; */
+}
+.gallery__overlay{
+  position: absolute;
+  padding: auto;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* border-radius: 10px; */
+  background-color: rgba(0, 0, 0, .4);
+  opacity: 0;
+  transition: all .5s;
+}
+
+.gallery__list .gallery__item:hover .gallery__overlay {
+  opacity: 1;
+}
+
+.gallery__text {
+  position: absolute;
+  bottom: 30px;
+  left: 60px;
+  text-align: left;
+  transition: all .5s;
+  transform: translateY(50px);
+  color: white;
+}
+.gallery__item:hover .gallery__text {
+  transform: translateY(0)
+}
+.gallery__text p{
+  width: 70%;
+}
+/*  */
+
 
