--- a/css/style.css
+++ b/css/style.css
@@ -125,9 +125,10 @@ header.main-header {
   border-bottom: 1px solid rgba(231, 231, 231, 0.18);
 }
 
-.header__icon .btn{
-  text-align:inherit
+.header__icon .btn {
+  text-align: inherit
 }
+
 /* Light theme */
 #switchButton .bi-brightness-high {
   display: none;
@@ -229,26 +230,32 @@ header.main-header {
 .dark .gallery .company-logos {
   border-top: 1px solid rgba(29, 42, 55, 0.8);
 }
-.dark .success .percent h4{
-  color: #c2c2c2;
-}
-.dark .feedback{
-  background-color: black;
-}
-.dark .feedback .feedback-text h1{
+
+.dark .success .percent h4 {
   color: #c2c2c2;
 }
 
-.dark .news-item a:last-of-type{
+.dark .feedback {
+  background-color: black;
+}
+
+.dark .feedback .feedback-text h1 {
   color: #c2c2c2;
 }
-.dark .news-item hr{
+
+.dark .news-item a:last-of-type {
+  color: #c2c2c2;
+}
+
+.dark .news-item hr {
   border-top: 1px solid rgba(29, 42, 55, 0.8);
 }
-.dark .news .news-list .news-item{
+
+.dark .news .news-list .news-item {
   border: 1px solid rgba(29, 42, 55, 0.8);
 }
-.dark .news .logo-news img{
+
+.dark .news .logo-news img {
   border-radius: 50%;
 }
 
@@ -328,9 +335,10 @@ header.main-header {
   right: -1000px;
 }
 
-.carousel-caption .btn{
+.carousel-caption .btn {
   text-align: inherit;
 }
+
 /* ABOUT US */
 
 ul.sevice-list li {
@@ -361,9 +369,11 @@ ul.sevice-list li a {
 .feature {
   background-color: #f7f7f7;
 }
-.feature .feature__left .title-small{
+
+.feature .feature__left .title-small {
   margin-top: 50px;
 }
+
 .feature .box-wrap {
   padding: 40px 30px;
   border-radius: 8px;
@@ -979,7 +989,7 @@ ul.sevice-list li a {
   visibility: visible;
 }
 
-/* reponsive */
+/* reponsive_Sang*/
 @media only screen and (max-width: 844px) {
   .row {
     flex-wrap: wrap;
@@ -1012,6 +1022,37 @@ ul.sevice-list li a {
 
     object-position: center center;
   }
+
+  /*  */
+  /* .title-big {
+    font-size: 26px;
+    line-height: 35px;
+  }
+  .AboutImages .col-6{
+    padding: 0 5px;
+  }
+  .feature .feature__left .title-small {
+    margin-top: 0px;
+  }
+  .feature__right__box {
+    margin-top: 90px;
+  }
+  .feature .box-wrap h4 a {
+    font-size: 16px;
+  }
+  .services .row {
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  .gallery .gallery__list {
+    display: unset;
+  }
+  .gallery .gallery__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 35px;
+  } */
+
 }
 
 @media only screen and (max-width: 390px) {
@@ -1053,42 +1094,208 @@ ul.sevice-list li a {
 
     object-position: center center;
   }
-/*  */
-  .AboutImages__small img:last-of-type{
-    margin-top: 10px;
-  }
-  .title-big{
-    font-size: 28px;
+
+}
+
+/* responsive_PhươngOanh */
+
+@media only screen and (max-width: 912px){
+.title-big {
+    font-size: 32px;
     line-height: 35px;
   }
-  .btn-success{
-    width: 180px;
-    height: 50px;
-    font-size: 16px;
-    
-    }
-  .feature__right__box{
-    margin-top: 70px;
+  .aboutus .row{
+    flex-wrap: wrap;
   }
-  .feature .box-wrap{
-    padding: 10px 30px;
+  .feature .row{
+    flex-wrap: wrap;
   }
-  .feature .feature__right__box {
-    gap: 15px;
+  .gallery .row{
+    flex-wrap: wrap;
+  }
+  .feature .feature__left .title-small {
+    margin-top: 0px;
+  }
+  .feature__right__box {
+    margin-top: 90px;
   }
   .feature .box-wrap h4 a {
-    font-size: 18px;
+    font-size: 16px;
   }
-  .feature__left p{
-    padding: 30px 0;
+  .services .row {
+    flex-wrap: wrap;
+    flex-direction: row;
   }
   .gallery .gallery__list {
-    display:unset;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 35px;
   }
-  .gallery__item{
+}
+@media only screen and (max-width: 540px){
+  .title-big {
+    font-size: 30px;
+    line-height: 35px;
+  }
+  .AboutImages__small img:last-of-type {
+    margin-top: 10px;
+  }
+  .feature .box-wrap {
+    padding: 10px 20px;
+  }
+  .gallery .gallery__list {
+    display: unset;
+  }
+  .gallery__item {
     margin-bottom: 20px;
   }
 }
+@media only screen and (max-width: 414px){
+  /*  */
+  .AboutImages__small img:last-of-type {
+    margin-top: 10px;
+  }
+  .AboutImages .col-6{
+  padding: 0 5px;
+  }
+  .feature .feature__left .title-small {
+  margin-top: 0px;
+  }
+  .title-big {
+    font-size: 26px;
+    line-height: 35px;
+  }
+  
+  .btn-success {
+    width: 180px;
+    height: 50px;
+    font-size: 16px;
+  }
+  
+  .feature__right__box {
+    margin-top: 70px;
+  }
+  
+  .feature .box-wrap {
+    padding: 10px 30px;
+  }
+  
+  .feature .feature__right__box {
+    gap: 15px;
+  }
+  
+  .feature .box-wrap h4 a {
+    font-size: 16px;
+  }
+  
+  .feature__left p {
+    padding: 30px 0;
+  }
+  
+  .gallery .gallery__list {
+    display: unset;
+  }
+  
+  .gallery__item {
+    margin-bottom: 20px;
+  }
+  
+  }
 
+@media only screen and (max-width: 390px){
+  .title-big {
+    font-size: 26px;
+    line-height: 35px;
+  }
+}
+@media only screen and (max-width: 375px){
+  .title-big {
+    font-size: 22px;
+    line-height: 35px;
+  }
+}
+@media only screen and (max-width: 360px){
+  .title-big {
+    font-size: 25px;
+    line-height: 35px;
+  }
+  ul.sevice-list li a {
+    font-size: 16px;
+  }
+  .feature .box-wrap h4 a {
+    font-size: 15px;
+  }
+}
+@media only screen and (max-width: 280px){
+  .feature__right .d-grid{
+    display: unset;
+  }
+  .feature__right {
+    margin-top: 70px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .prev_icon {
+    right: -770px;
+  }
+}
 
+@media only screen and (max-width: 912px) {
+  .prev_icon {
+    right: -680px;
+  }
+}
 
+@media only screen and (max-width: 820px) {
+  .prev_icon {
+    right: -600px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .prev_icon {
+    right: -550px;
+  }
+}
+
+@media only screen and (max-width: 540px) {
+  .prev_icon {
+    right: -370px;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .prev_icon {
+    right: -260px;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  .prev_icon {
+    right: -250px;
+  }
+}
+
+@media only screen and (max-width: 393px) {
+  .prev_icon {
+    right: -235px;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  .prev_icon {
+    right: -240px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .prev_icon {
+    right: -220px;
+  }
+}
+
+@media only screen and (max-width: 280px) {
+  .prev_icon {
+    right: -150px;
+  }
+}
